# swarm

./: .env.example  .gitignore  .settings.json  AGENTS.md  IMPLEMENTATION.md  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.cursor/rules/: general.mdc  htmx-frontend.mdc  python-backend.mdc
backend/: __init__.py  config.py  main.py  supabase_client.py
backend/agents/: __init__.py  analyst.py  base.py  coder.py  researcher.py  reviewer.py  supervisor.py  synthesizer.py
backend/api/: auth_middleware.py  websocket.py
backend/api/routes/: agents.py  files.py  providers.py  settings.py  tasks.py
backend/core/: __init__.py  agent_selector.py  decomposer.py  delegator.py  orchestrator.py  quality_validator.py  query_expander.py
backend/debate/: __init__.py  convergence.py  engine.py  scoring.py
backend/llm/: __init__.py  circuit_breaker.py  providers.py  router.py
backend/memory/: __init__.py  context_normalizer.py  manager.py  postgres_store.py  redis_store.py  supabase_store.py  vector_store.py
backend/models/: __init__.py  agent.py  debate.py  memory.py  subtask.py  task.py
backend/prompts/: __init__.py  citation_requirements.py  depth_requirements.py  prompts.py  schemas.py
backend/services/: document_processor.py
backend/tools/: __init__.py  registry.py  web_fetch.py  web_search.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/templates/: base.html
scripts/: run.sh  setup.sh
(+29 files in other folders)
